# QCurl

./: .clang-format  .gitignore  AI_CODING_BEHAVIOR.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPP_Code_Comment_Guidelines.md  Doxyfile  LICENSE  Qt6_CPP17_Coding_Style.md  README.md  SECURITY.md  SUPPORT.md  SYSTEM_DOCUMENTATION.md  THIRD_PARTY_NOTICES.md  qcurl-other-extras.pc.in  qcurl.pc.in
benchmarks/: CMakeLists.txt  benchmark_connectionpool.cpp  benchmark_http2.cpp  benchmark_http3.cpp  benchmark_scheduler.cpp  benchmark_scheduler_helpers.h  benchmark_websocket_compression.cpp  benchmark_websocket_eventdriven.cpp  benchmark_websocket_pool.cpp
examples/: CMakeLists.txt  README.md
examples/ApiClientDemo/: ApiClient.cpp  ApiClient.h  CMakeLists.txt  main.cpp
examples/BatchRequestDemo/: BatchRequest.cpp  BatchRequest.h  CMakeLists.txt  main.cpp
examples/CancelTokenDemo/: CMakeLists.txt  main.cpp
examples/CanonicalRequestDemo/: CMakeLists.txt  main.cpp
examples/FileDownloadDemo/: CMakeLists.txt  DownloadManager.cpp  DownloadManager.h  DownloadTask.cpp  DownloadTask.h  main.cpp
examples/FileTransferDemo/: CMakeLists.txt  main.cpp
examples/Http2Demo/: CMakeLists.txt  main.cpp
examples/Http3Demo/: CMakeLists.txt  README.md  main.cpp
examples/LoggingDemo/: CMakeLists.txt  README.md  main.cpp
examples/MiddlewareDemo/: CMakeLists.txt  main.cpp
examples/MultipartSimpleDemo/: CMakeLists.txt  main.cpp
examples/NetworkFeaturesDemo/: CMakeLists.txt  README.md  main.cpp
examples/ProxyDemo/: CMakeLists.txt  main.cpp
examples/QCurl/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  QCurl.pro
examples/RequestBuilderDemo/: CMakeLists.txt  main.cpp
examples/SchedulerDemo/: CMakeLists.txt  main.cpp
examples/StressTest/: CMakeLists.txt  main.cpp
examples/UnifiedPolicyMiddlewareOfflineDemo/: CMakeLists.txt  main.cpp
examples/WebSocketCompressionDemo/: CMakeLists.txt  README.md  main.cpp
examples/WebSocketDemo/: CMakeLists.txt  main.cpp
examples/WebSocketPoolDemo/: CMakeLists.txt  PerformanceTest.cpp  PerformanceTest.h  PoolDemo.cpp  PoolDemo.h  main.cpp
src/: CMakeLists.txt  CurlEasyHandleInitializtionClass.cpp  CurlEasyHandleInitializtionClass.h  CurlFeatureProbe.cpp  CurlFeatureProbe.h  CurlGlobalConstructor.cpp  CurlGlobalConstructor.h  CurlMultiHandleProcesser.cpp  CurlMultiHandleProcesser.h  QCBlockingCookieStore.cpp  QCBlockingCookieStore.h  QCBlockingNetworkClient.cpp  QCBlockingNetworkClient.h  QCBlockingNetworkClientOptions.cpp  QCBlockingNetworkResult.cpp  QCBlockingNetworkResult.h  QCCookie.cpp  QCCookie.h  QCCookieAsyncResult.cpp  QCCookieAsyncResult.h  QCCurlHandleManager.cpp  QCCurlHandleManager.h  QCCurlMultiManager.cpp  QCCurlMultiManager.h  QCGlobal.cpp  QCGlobal.h  QCMultipartFormData.cpp  QCMultipartFormData.h  QCNetworkAccessManager.cpp  QCNetworkAccessManager.h  QCNetworkAccessManagerConfig.cpp  QCNetworkAccessManagerCookies.cpp  QCNetworkAccessManagerSend.cpp  QCNetworkAccessManagerServices.cpp  QCNetworkAccessManager_p.h  QCNetworkAsyncDataPostReply.cpp  QCNetworkAsyncDataPostReply.h  QCNetworkAsyncHttpGetReply.cpp  QCNetworkAsyncHttpGetReply.h  QCNetworkAsyncHttpGetReply_p.h  (+116 more)
src/private/: CurlGlobalConstructor_p.h  LaneRuntimePruner.cpp  LaneRuntimePruner_p.h  LaneSchedulingPolicy.cpp  LaneSchedulingPolicy_p.h  QCBlockingCurlAdapter.cpp  QCBlockingCurlAdapter_p.h  QCBlockingCurlCookieSetup.cpp  QCBlockingCurlMethodSetup.cpp  QCBlockingCurlMethodSetup_p.h  QCBlockingCurlRequestSetup.cpp  QCBlockingCurlRequestSetupExtensions.cpp  QCBlockingCurlRequestSetup_p.h  QCBlockingRequestBody.cpp  QCBlockingRequestBody_p.h  QCCurlMultiManagerCookieContext.cpp  QCCurlMultiManagerCookies.cpp  QCCurlMultiManagerEventDriver.cpp  QCCurlMultiManagerLimits.cpp  QCCurlMultiManagerShare.cpp  QCCurlMultiManagerShareLifecycle.cpp  QCCurlOptionAdapter_p.h  QCMultipartHeaderEncoding_p.h  QCNetworkHttpVersion_p.h  QCNetworkLogRedaction_p.h  QCNetworkMiddlewareInternal_p.h  QCNetworkReplyAccessors.cpp  QCNetworkReplyBodySource.cpp  QCNetworkReplyBodySource_p.h  QCNetworkReplyCallbacks.cpp  QCNetworkReplyCallbacks_p.h  QCNetworkReplyControls.cpp  QCNetworkReplyCurlOptions.cpp  QCNetworkReplyExecution.cpp  QCNetworkReplyFlowControl.cpp  QCNetworkReplyFlowControl_p.h  QCNetworkReplyResponse.cpp  QCNetworkReplyResponse_p.h  QCNetworkReplyRuntime.cpp  QCNetworkReplyRuntime_p.h  (+29 more)
tests/: CMakeLists.txt  INTEGRATION_TEST_REPORT.md  QCWebSocketTestServer.h  README.md  __init__.py  coverage-map.yaml  package-lock.json  test_check_qcurl_label_matrix.py  test_coverage_maps.py  test_ctest_strict.py  test_httpbin_env.h  test_netproof_capabilities.py  test_netproof_strace_gate.py  test_release_gate_unit.py  test_run_uce_gate.py  test_run_uce_sanitizers.py  test_uce_bp.py  test_uce_ctbp.py  test_uce_hes.py  test_uce_manifest.py  test_uce_redaction_gate.py  test_uce_timeline.py  tst_CurlFeatureProbe.cpp  tst_Integration.cpp  tst_LargeFileDownload.cpp  tst_LibcurlConsistency.cpp  tst_QCMultipartFormData.cpp  tst_QCNetworkActorThreadModel.cpp  tst_QCNetworkCache.cpp  tst_QCNetworkCacheIntegration.cpp  tst_QCNetworkCancelToken.cpp  tst_QCNetworkConnectionPool.cpp  tst_QCNetworkCookieBridge.cpp  tst_QCNetworkDiagnostics.cpp  tst_QCNetworkError.cpp  tst_QCNetworkFileTransfer.cpp  tst_QCNetworkHttp2.cpp  tst_QCNetworkHttp3.cpp  tst_QCNetworkHttpErrorMappingOffline.cpp  tst_QCNetworkIODeviceLifetime.cpp  (+24 more)
tests/httpbin/: start_httpbin.sh  stop_httpbin.sh
tests/libcurl_consistency/: CMakeLists.txt  LC-15_handoff.md  README.md  __init__.py  backpressure_baseline_client.cpp  cli_parse.h  conftest.py  coverage-map.yaml  http_baseline_client.cpp  http_observe_server.py  http_proxy_server.py  minimal_set.yaml  multi_get4_baseline_client.cpp  pause_resume_baseline_client.cpp  postfields_binary_baseline_client.cpp  prompt  qcurl_lc_capability_probe.cpp  range_resume_baseline_client.cpp  requirements.lock.txt  run_gate.py  run_perf_ab_share_handle.py  run_perf_matrix_share_handle.py  run_soak_share_handle.py  share_handle_baseline_client.cpp  (+54 more)
(+280 files in other folders)
